k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app.kubernetes.io/instance: github-api
    app.kubernetes.io/name: github-api
  name: github-api
  namespace: ghmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: github-api
      app.kubernetes.io/name: github-api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: github-api
        app.kubernetes.io/name: github-api
    spec:
      containers:
      - name: github-api
        image: fswoon2/alexwfs:github-map-api
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: api
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsGroup: 101
          runAsNonRoot: true
          runAsUser: 101
          seccompProfile:
            type: RuntimeDefault
      imagePullSecrets:
        - name: regcred
