k8s/metrics-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app.kubernetes.io/instance: github-api
    app.kubernetes.io/name: github-api
  name: github-api
  namespace: ghmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: github-api
      app.kubernetes.io/name: github-api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: github-api
        app.kubernetes.io/name: github-api
    spec:
      containers:
      - name: github-api
        image: fswoon2/alexwfs:github-map-api
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: api
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsGroup: 101
          runAsNonRoot: true
          runAsUser: 101
          seccompProfile:
            type: RuntimeDefault
      imagePullSecrets:
        - name: regcred
     
---
apiVersion: v1
kind: Service
metadata:
  name: github-api-service
  namespace: ghmap
  labels:
    app.kubernetes.io/instance: github-api
    app.kubernetes.io/name: github-api
spec:
  selector:
    app.kubernetes.io/instance: github-api
    app.kubernetes.io/name: github-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-api
  namespace: ghmap
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: ghmap.fswoon.au
    http:
      paths:
      - backend:
          service:
            name: github-api-service
            port:
              number: 8000
        path: /api/v1/?(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ghmap.fswoon.au
    secretName: aks-ingress-tls
